<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/home"
        android:layout_margin="20sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="125sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="#1E1E1E"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_scroll_here"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvUOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/uob"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvDBS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/dbs"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/tvOCBC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20sp"
                android:text="@string/ocbc"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="45sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="20sp"
            android:fontFamily="sans-serif-black"/>

        <Button
            android:id="@+id/buttonFirstViral"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center"
            android:text="@string/viral_video_ffix_enables_cognitive_functions"
            app:backgroundTint="#1E1E1E" />

        <Button
            android:id="@+id/buttonSecondViral"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center"
            android:text="@string/viral_video_how_the_chicken_crossed_the_road"
            app:backgroundTint="#1E1E1E" />

        <Button
            android:id="@+id/buttonThirdViral"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center"
            android:text="@string/trending_news_how_to_eat_sausages_without_using_your_fingers"
            app:backgroundTint="#1E1E1E" />

        <Button
            android:id="@+id/buttonInvite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#000000"
            android:layout_marginTop="20sp"
            android:text="@string/invite_your_friends" />
    </LinearLayout>

</LinearLayout>
